# postcard-rpc

example/firmware/: Cargo.toml
example/firmware/.cargo/: config.toml
example/firmware/src/: lib.rs
example/workbook-host/: Cargo.toml
example/workbook-host-wasm/: Cargo.toml  README.md  index.html  index.js  package.json  pnpm-lock.yaml  sleep.js  webpack.config.js
example/workbook-host-wasm/src/: client.rs  lib.rs  wasm.rs
example/workbook-host/src/: client.rs
source/postcard-rpc/: Cargo.toml
source/postcard-rpc/src/host_client/: cross_usb.rs  mod.rs  webusb.rs
