[package]
name = "workbook-host-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Navigator", "Usb", "UsbDevice", "UsbDeviceRequestOptions", "UsbInTransferResult", "UsbOutTransferResult"] }
log = "0.4.21"
console_log = "1.0.0"

[dependencies.workbook-icd]
path = "../workbook-icd"

[dependencies.postcard-rpc]
version = "0.4"
features = [
    "use-std",
    "webusb",
]

[dependencies.tokio]
version = "1.37.0"
features = [
    "rt",
    "sync",
    "macros",
]

[patch.crates-io]
postcard-rpc = { path = "../../source/postcard-rpc" }
